--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,9 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+pnpm-debug.log*
 
-# Build output
+# Build outputs
 dist/
 build/
 *.tsbuildinfo
@@ -16,7 +17,7 @@ build/
 .env.test.local
 .env.production.local
 
-# IDE files
+# IDE and editor files
 .vscode/
 .idea/
 *.swp
@@ -36,13 +37,101 @@ Thumbs.db
 logs
 *.log
 
-# Coverage
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
 coverage/
+*.lcov
 .nyc_output
 
-# Jest
+# Test files
+.jest/
 jest.config.js.bak
 
-# Temporary files
+# Temporary folders
+tmp/
+temp/
 *.tmp
 *.temp
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# parcel-bundler cache (https://parceljs.org/)
+.cache
+.parcel-cache
+
+# next.js build output
+.next
+
+# nuxt.js build output
+.nuxt
+
+# vuepress build output
+.vuepress/dist
+
+# Serverless directories
+.serverless
+
+# FuseBox cache
+.fusebox/
+
+# DynamoDB Local files
+.dynamodb/
+
+# TernJS port file
+.tern-port
+
+# Husky
+.husky/_
+
+# Auto-generated files
+# Note: Keep generate-svg-imports.js but ignore its output
+src/utils/staticSvgMap.ts
+
+# Package files
+*.tar.gz
+
+# Lock files (optional - uncomment if you want to ignore them)
+# package-lock.json
+# yarn.lock
+
+# TypeScript
+*.d.ts.map
+
+# Rollup cache
+.rollup.cache/
+
+# Local development
+.local
+
+# Storybook build outputs
+storybook-static/
+
+# Testing
+cypress/videos/
+cypress/screenshots/
+test-results/
+playwright-report/
+
+# Documentation builds
+docs/build/
+
+# Vite
+vite.config.*.timestamp-*
