--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@rollup/plugin-commonjs": "^25.0.7",
     "@rollup/plugin-node-resolve": "^15.2.3",
     "@rollup/plugin-typescript": "^11.1.5",
+    "@rollup/plugin-url": "^8.0.2",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^14.3.1",
     "@types/jest": "^29.5.8",
@@ -79,6 +80,7 @@
     "husky": "^8.0.3",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "jest-svg-transformer": "^1.0.0",
     "lint-staged": "^15.2.0",
     "prettier": "^3.1.0",
     "react": "^18.3.1",
@@ -86,6 +88,7 @@
     "rollup": "^4.6.1",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-dts": "^6.1.0",
+    "rollup-plugin-string": "^3.0.0",
     "ts-jest": "^29.1.1",
     "tslib": "^2.8.1",
     "typescript": "5.3.3",
